--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename= 'bootstrap-5.1.3-dist/css/bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-5.1.3-dist/css/bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>{% block title %} {% endblock %}</title>
 </head>
 
 <body>
-
-    <h1>Hola soy de bootstrap</h1>
     {% block content %} {% endblock %}
 </body>
 
